--- a/quiz/Dockerfile
+++ b/quiz/Dockerfile
@@ -1,6 +1,6 @@
 FROM maven:3-eclipse-temurin-17 AS build
-COPY . .
-RUN ./gradlew build
+COPY ./ /home/app
+RUN cd /home/app && ./gradlew build
 
 FROM amazoncorretto:17-alpine
 COPY --from=build /home/app/build/libs/spring-render-deploy-0.0.1-SNAPSHOT.jar /usr/local/lib/spring-render-deploy.jar
